// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Authorize API return a hmac salt 1`] = `"w4uh61mm79nxt7re"`;

exports[`Authorize API return an authorization token 1`] = `
Object {
  "id": "90019",
  "token": "2d720993-4aed-43c6-a653-90d3f9a87e9b",
}
`;

exports[`Login should display error prompt 1`] = `
<div>
  <div
    class="flex flex-col min-h-screen min-w-full w-full"
  >
    <main
      class="hero flex-1"
    >
      <div
        class="hero-content flex-col w-full"
      >
        <header
          class="flex items-center justify-center py-2"
        >
          <div
            class="flex justify-start"
          >
            <a
              class="btn gap-1 btn-ghost normal-case"
              href="/"
            >
              <div
                class="w-12 relative aspect-square"
              >
                <span
                  style="box-sizing: border-box; display: block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px;"
                >
                  <img
                    alt="logo"
                    data-nimg="fill"
                    decoding="async"
                    sizes="100vw"
                    src="/_next/image?url=%2Fimg.jpg&w=3840&q=75"
                    srcset="/_next/image?url=%2Fimg.jpg&w=640&q=75 640w, /_next/image?url=%2Fimg.jpg&w=750&q=75 750w, /_next/image?url=%2Fimg.jpg&w=828&q=75 828w, /_next/image?url=%2Fimg.jpg&w=1080&q=75 1080w, /_next/image?url=%2Fimg.jpg&w=1200&q=75 1200w, /_next/image?url=%2Fimg.jpg&w=1920&q=75 1920w, /_next/image?url=%2Fimg.jpg&w=2048&q=75 2048w, /_next/image?url=%2Fimg.jpg&w=3840&q=75 3840w"
                    style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                  />
                  <noscript />
                </span>
              </div>
              <h1
                class="text-xl font-bold text-base-content"
              />
              <span
                class="sr-only"
              >
                Logo
              </span>
            </a>
          </div>
        </header>
        <h1
          class="text-2xl font-bold text-center"
        >
          Sign in to Bookworm
        </h1>
        <div
          class="card flex-shrink-0 w-full max-w-sm shadow-2xl bg-base-100"
        >
          <div
            class="card-body"
          >
            <form>
              <div
                class="form-control"
              >
                <label
                  class="label"
                >
                  <span
                    class="label-text"
                  >
                    Username or email address
                  </span>
                </label>
                <input
                  class="input input-bordered input-error input-md"
                  disabled=""
                  errors="[object Object]"
                  name="username"
                  placeholder="username / email"
                />
                <label
                  class="label"
                >
                  <span
                    class="label-text-alt text-error"
                  >
                    Username is required
                  </span>
                </label>
              </div>
              <div
                class="form-control"
              >
                <label
                  class="label"
                >
                  <span
                    class="label-text"
                  >
                    Password
                  </span>
                </label>
                <input
                  class="input input-bordered input-error input-md"
                  disabled=""
                  errors="[object Object]"
                  name="password"
                  placeholder="password"
                  type="password"
                />
                <label
                  class="label"
                >
                  <span
                    class="label-text-alt text-error"
                  >
                    Password is required
                  </span>
                </label>
              </div>
              <div
                class="form-control mt-6"
              >
                <input
                  class="btn btn-primary"
                  type="submit"
                  value="Sign in"
                />
              </div>
            </form>
          </div>
        </div>
      </div>
    </main>
    <footer
      aria-label="Footer"
      class="footer footer-center p-4 bg-base-300 text-base-content"
    >
      <div>
        <p
          aria-label="copyright"
          role="presentation"
        >
          Copyright © 
          2022
          , All right reserved
           by Zheng Junyi
          .
        </p>
      </div>
    </footer>
  </div>
</div>
`;

exports[`Login should login success 1`] = `
<div>
  <div
    class="flex flex-col min-h-screen min-w-full w-full"
  >
    <main
      class="hero flex-1"
    >
      <div
        class="hero-content flex-col w-full"
      >
        <header
          class="flex items-center justify-center py-2"
        >
          <div
            class="flex justify-start"
          >
            <a
              class="btn gap-1 btn-ghost normal-case"
              href="/"
            >
              <div
                class="w-12 relative aspect-square"
              >
                <span
                  style="box-sizing: border-box; display: block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px;"
                >
                  <img
                    alt="logo"
                    data-nimg="fill"
                    decoding="async"
                    sizes="100vw"
                    src="/_next/image?url=%2Fimg.jpg&w=3840&q=75"
                    srcset="/_next/image?url=%2Fimg.jpg&w=640&q=75 640w, /_next/image?url=%2Fimg.jpg&w=750&q=75 750w, /_next/image?url=%2Fimg.jpg&w=828&q=75 828w, /_next/image?url=%2Fimg.jpg&w=1080&q=75 1080w, /_next/image?url=%2Fimg.jpg&w=1200&q=75 1200w, /_next/image?url=%2Fimg.jpg&w=1920&q=75 1920w, /_next/image?url=%2Fimg.jpg&w=2048&q=75 2048w, /_next/image?url=%2Fimg.jpg&w=3840&q=75 3840w"
                    style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                  />
                  <noscript />
                </span>
              </div>
              <h1
                class="text-xl font-bold text-base-content"
              />
              <span
                class="sr-only"
              >
                Logo
              </span>
            </a>
          </div>
        </header>
        <h1
          class="text-2xl font-bold text-center"
        >
          Sign in to Bookworm
        </h1>
        <div
          class="card flex-shrink-0 w-full max-w-sm shadow-2xl bg-base-100"
        >
          <div
            class="card-body"
          >
            <form>
              <div
                class="form-control"
              >
                <label
                  class="label"
                >
                  <span
                    class="label-text"
                  >
                    Username or email address
                  </span>
                </label>
                <input
                  class="input input-bordered input-md"
                  errors="[object Object]"
                  name="username"
                  placeholder="username / email"
                />
              </div>
              <div
                class="form-control"
              >
                <label
                  class="label"
                >
                  <span
                    class="label-text"
                  >
                    Password
                  </span>
                </label>
                <input
                  class="input input-bordered input-md"
                  errors="[object Object]"
                  name="password"
                  placeholder="password"
                  type="password"
                />
              </div>
              <div
                class="form-control mt-6"
              >
                <input
                  class="btn btn-primary"
                  type="submit"
                  value="Sign in"
                />
              </div>
            </form>
          </div>
        </div>
      </div>
    </main>
    <footer
      aria-label="Footer"
      class="footer footer-center p-4 bg-base-300 text-base-content"
    >
      <div>
        <p
          aria-label="copyright"
          role="presentation"
        >
          Copyright © 
          2022
          , All right reserved
           by Zheng Junyi
          .
        </p>
      </div>
    </footer>
  </div>
  <div
    class="notistack-SnackbarContainer go1453831412 go2989568495 go1141946668"
  >
    <div
      class="go1475592160 go1671063245"
      style="pointer-events: all; overflow: visible; min-height: 0px; transition: height 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    >
      <div
        class="notistack-CollapseWrapper"
        style="display: flex; width: 100%;"
      >
        <div
          class="notistack-Snackbar go3963613292"
        >
          <div
            class="go1888806478 notistack-MuiContent go167266335 go1725278324 go3162094071"
            role="alert"
            style="webkit-transform: none; transform: none; webkit-transition: -webkit-transform 225ms cubic-bezier(0.0, 0, 0.2, 1) 0ms; transition: transform 225ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;"
          >
            <div
              class="go946087465"
              id="notistack-snackbar"
            >
              <svg
                focusable="false"
                style="font-size: 20px; margin-inline-end: 8px; user-select: none; width: 1em; height: 1em; display: inline-block; fill: currentColor; flex-shrink: 0;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.5 2 2 6.5 2 12S6.5 22 12 22 22 17.5 22 12 17.5 2 12 2M10 17L5 12L6.41
        10.59L10 14.17L17.59 6.58L19 8L10 17Z"
                />
              </svg>
              Login Success!
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
